# 42_minishell

./: .gitignore  .gitmodules  3  CMakeLists.txt  COUCOU  Makefile  OUT  bash_2  execute.c  fichier8  fizzbuzz.c  ignore_leaks.supp  main.c  minishell  notes.txt  out  outfile  questions  tests  tests.txt  three  youyou
.build/: error.d  lexer.d  main.d
.github/workflows/: compile_check-github-action.yml  norminette_check-github-action.yml
includes/: builtins.h  error.h  exec.h  execute.h  ft_realpath.h  general.h  lexer.h  minishell.h  parser.h  pipex_bonus.h  signals.h  utils.h
libft/: Makefile
libft/.objs/src/: utils.d
libft/.objs/src/ft_is/: ft_isalnum.d  ft_isalpha.d  ft_isascii.d  ft_isdigit.d  ft_isprint.d
libft/.objs/src/ft_lst/: ft_lstadd_back.d  ft_lstadd_front.d  ft_lstclear.d  ft_lstdelone.d  ft_lstiter.d  ft_lstlast.d  ft_lstmap.d  ft_lstnew.d  ft_lstsize.d
libft/.objs/src/ft_mem/: ft_bzero.d  ft_calloc.d  ft_memchr.d  ft_memcmp.d  ft_memcpy.d  ft_memmove.d  ft_memset.d  ft_realloc.d
libft/.objs/src/ft_printf/: ft_printf.d  numbers_functions.d  strings_functions.d
libft/.objs/src/ft_put/: ft_putchar_fd.d  ft_putendl_fd.d  ft_putnbr_fd.d  ft_putstr_fd.d
libft/.objs/src/ft_str/: ft_split.d  ft_strchr.d  ft_strcmp.d  ft_strdup.d  ft_striteri.d  ft_strjoin.d  ft_strlcat.d  ft_strlcpy.d  ft_strlen.d  ft_strmapi.d  ft_strncmp.d  ft_strnstr.d  ft_strrchr.d  ft_strtrim.d  ft_substr.d
libft/.objs/src/ft_to/: ft_atoi.d  ft_atol.d  ft_itoa.d  ft_tolower.d  ft_toupper.d
libft/.objs/src/gnl/: get_next_line.d  get_next_line_utils.d
libft/inc/: get_next_line.h  libft.h
libft/src/: utils.c
libft/src/ft_is/: ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c
libft/src/ft_lst/: ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c
libft/src/ft_mem/: ft_bzero.c  ft_calloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_realloc.c
libft/src/ft_printf/: ft_printf.c  numbers_functions.c  strings_functions.c
libft/src/ft_put/: ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c
libft/src/ft_str/: ft_split.c  ft_split_either_sep.c  ft_strchr.c  ft_strcmp.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  ft_strlcat.c  ft_strlcpy.c  ft_strlen.c  ft_strmapi.c  ft_strncmp.c  ft_strnstr.c  ft_strrchr.c  ft_strtrim.c  ft_substr.c
libft/src/ft_to/: ft_atoi.c  ft_atol.c  ft_itoa.c  ft_tolower.c  ft_toupper.c
libft/src/gnl/: get_next_line.c  get_next_line_utils.c
libft/src/hashmap/: hm_add_elem.c  hm_clear.c  hm_delete_elem.c  hm_get_content.c  hm_get_elem.c  hm_get_index.c  hm_init.c  hm_print.c  hm_size.c
libft/src/hashmap_dictionnary/: hm_add_elem.c  hm_clear.c  hm_get_content.c  hm_get_elem.c  hm_get_index.c  hm_init.c  hm_print.c  hm_size.c
srcs/: builtin.c  count_tokens.c  create_cmd_in_array.c  create_tables_from_tokens.c  env_variables.c  envp_calcultate_size.c  error.c  expansion.c  free.c  init.c  lexer.c  main.c  operator.c  parser.c  print.c  signal.c  split_readline_string.c  subshells_list_generate.c  tokenization.c  utils.c
srcs/builtins/: builtins_utils.c  cd_builtin.c  cd_utils.c  echo_builtin.c  env_builtin.c  exit.c  exit_builtin.c  exit_builtin2.c  export.c  export_builtin.c  export_print.c  ft_realpath.c  ft_realpath_utils.c  ft_split_list.c  pwd_builtin.c  realpath_utils.c  unset_builtin.c
srcs/env_variables/: env_utils.c  env_variables.c  envp_calcultate_size.c  envp_list_utils.c  fake_env.c  manage_envp_lists.c  shell_level.c
srcs/error/: error.c
srcs/exec/: child_care.c  errors.c  errors_exit.c  errors_from_pipex.c  exec.c  exec.h  exec_bool.c  exec_builtins.c  exec_utils.c  fd_in_out.c  fd_management.c  fichier2  here_cat.c  heredoc.c  heredoc_utils.c  my_execve.c  old_exec.h  one_cmd_in_out.c  paths.c  safe_utils.c  utils.c
srcs/exec/testouille_folder/: childcare.c  exec.c  exec.h  heredoc.c  safe_utils.c
srcs/expansio_parsing/: expansion_utils.c
srcs/expansion/: add_after_special_char.c  expansion.c  expansion_utils.c  expansion_utils_2.c  parse_env_var.c  process_dollar.c  utils.c  utils_2.c
srcs/joiner/: join_tokens.c  join_tokens_utils.c  old_functions_join
srcs/lexer/: .nfs0000000006c6259b00000001  builtin.c  check_syntax.c  count_tokens.c  join_tokens.c  lexer.c  operator.c  split_string.c  token.c  token_list.c  token_lst_utils.c  token_utils.c  tokenization.c
srcs/old_joiner/: join_tokens.c  join_tokens_utils.c
srcs/parser/: check_quotes.c  check_syntax.c  create_process_list.c  create_tables_from_tokens.c  create_tables_in_process_list.c  parser.c  parser_utils.c  parser_utils2.c  print_error_syntax.c  process_list.c  token_requalif.c  token_requalif_files.c  token_requalif_utils.c  utils.c
srcs/pipex/: .gitignore  Makefile  child_care_bonus.c  cmds_bonus.c  errors_bonus.c  heredoc_bonus.c  join_bonus.c  paths_bonus.c  pipe_utils_bonus.c  pipex_bonus.c  utils_bonus.c
srcs/pipex/header/: pipex_bonus.h
srcs/pipex/src/: child_care_bonus.c  cmds_bonus.c  errors_bonus.c  heredoc_bonus.c  join_bonus.c  paths_bonus.c  pipe_utils_bonus.c  pipex_bonus.c
srcs/signals/: signal.c  signal_heredoc.c  signal_interrupt.c
srcs/utils/: error.c  free.c  free_utils.c  print.c  utils.c
